@@ -12,3 +12,4 @@ MAC_ADDRESS          char(18)
 LAST_SEEN            datetime
 UPDATE_FIRMWARE      int(11)          0=False, 1=True
 DEFAULT_FEED_ID	     int(11)          From FEEDS.ID
+DEFAULT_FEED_POSTED  enum('N','Y')
